--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <add-key-field></add-key-field>
         </div>
         <div id="results_table">
-            <table>
+            <table> <!-- example -->
                 <thead>
                     <th>Access Key ID</th>
                     <th>Secret Access Key</th>
